# QMLGiraffic

./: .gitignore  AddEventWindow.qml  AdminWindow.qml  AppButton.qml  AppComboBox.qml  AppField.qml  AppPanel.qml  AppTheme.qml  CMakeLists.txt  ClientsWindow.qml  DEPLOY.md  GiraffePattern.qml  Main.qml  ManageWindow.qml  NotifyWindow.qml  README.md  VenuesWindow.qml  WorkersWindow.qml  app_icon.rc  databasemanager.cpp  databasemanager.h  main.cpp
.github/workflows/: desktop-builds.yml  macos-build.yml
assets/: app_icon.icns
cmake/: Info.plist.in  windows_version.rc.in
config/: giraffic.ini.example
scripts/: deploy-linux.sh  deploy-macos.sh  deploy-windows.ps1  generate-macos-icon.sh
